force-app/main/default/objects/Activity/fields/Actual_Journey_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Journey_Date__c</fullName>
    <label>Actual Journey Date</label>
    <type>Date</type>
</CustomField>