force-app/main/default/objects/Activity/fields/Actual_Journey_Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>Actual_Journey_Duration_Min__c</fullName>
    <formula>(Check_out_Time__c - Check_in_Time__c) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Journey Duration (Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>