force-app/main/default/objects/Activity/fields/Check_in_Location_Captured__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Location_Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check-in Location Captured</label>
    <type>Checkbox</type>
</CustomField>