force-app/main/default/objects/Activity/fields/Check_out_Location__c.field-meta.xml
<CustomField>
    <fullName>Check_out_Location__c</fullName>
    <label>Check-out Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>