force-app/main/default/objects/Activity/fields/Deviation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Reason__c</fullName>
    <label>Deviation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>