force-app/main/default/objects/Activity/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <displayFormat>EVT-{000000}</displayFormat>
    <label>Event Name</label>
    <startingNumber>1</startingNumber>
    <type>AutoNumber</type>
</CustomField>