force-app/main/default/objects/Activity/fields/Is_Deviation__c.field-meta.xml
<CustomField>
    <fullName>Is_Deviation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deviation</label>
    <type>Checkbox</type>
</CustomField>