force-app/main/default/objects/Activity/fields/Is_Journey_Visit__c.field-meta.xml
<CustomField>
    <fullName>Is_Journey_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Journey Visit</label>
    <type>Checkbox</type>
</CustomField>