force-app/main/default/objects/Activity/fields/Journey_Status__c.field-meta.xml
<CustomField>
    <fullName>Journey_Status__c</fullName>
    <label>Journey Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Planned</fullName><default>false</default><label>Planned</label></value><value><fullName>Completed</fullName><default>false</default><label>Completed</label></value><value><fullName>Missed</fullName><default>false</default><label>Missed</label></value><value><fullName>Rescheduled</fullName><default>false</default><label>Rescheduled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>