force-app/main/default/objects/Activity/fields/Journey_Type__c.field-meta.xml
<CustomField>
    <fullName>Journey_Type__c</fullName>
    <label>Journey Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Unplanned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>