force-app/main/default/objects/Activity/fields/Lead_Created__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created__c</fullName>
    <formula>NOT(ISBLANK(Related_Lead__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Created</label>
    <type>Checkbox</type>
</CustomField>