force-app/main/default/objects/Activity/fields/Notes_Custom__c.field-meta.xml
<CustomField>
    <fullName>Notes_Custom__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>