force-app/main/default/objects/Activity/fields/Opportunity_Created__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Created__c</fullName>
    <formula>NOT(ISBLANK(Related_Opportunity__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Created</label>
    <type>Checkbox</type>
</CustomField>