force-app/main/default/objects/Activity/fields/Order_Created__c.field-meta.xml
<CustomField>
    <fullName>Order_Created__c</fullName>
    <formula>NOT(ISBLANK(Related_Order__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Created</label>
    <type>Checkbox</type>
</CustomField>