force-app/main/default/objects/Activity/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Successful</fullName><default>false</default><label>Successful</label></value><value><fullName>Rescheduled</fullName><default>false</default><label>Rescheduled</label></value><value><fullName>No Show</fullName><default>false</default><label>No Show</label></value><value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>