force-app/main/default/objects/Activity/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Lead Follow-up</fullName><default>false</default><label>Lead Follow-up</label></value><value><fullName>Opportunity Discussion</fullName><default>false</default><label>Opportunity Discussion</label></value><value><fullName>Quote Request</fullName><default>false</default><label>Quote Request</label></value><value><fullName>Support</fullName><default>false</default><label>Support</label></value><value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>