force-app/main/default/objects/Activity/fields/Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_Lead__c</fullName>
    <label>Related Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities_Related_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>