force-app/main/default/objects/Activity/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities_Related_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>