force-app/main/default/objects/Activity/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName>
    <label>Related Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities_Related_Order</relationshipName>
    <type>Lookup</type>
</CustomField>