force-app/main/default/objects/Activity/fields/Related_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Account__c</fullName>
    <label>Related To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities_Related_To_Account</relationshipName>
    <type>Lookup</type>
</CustomField>