force-app/main/default/objects/Activity/fields/Unplanned_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unplanned_Reason__c</fullName>
    <label>Unplanned Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>